# keystone-demo

./: .gitignore  BUILD_AND_RUN.md  CMakeLists.txt  README.md  agent.cpp  compile-demo.sh  enclave-host.cpp  quick-start.sh  riscv-toolchain.cmake  source.sh
include/: enclave_expected_hash  enclave_expected_hash.h  sm_expected_hash  sm_expected_hash.h
my_mbedtls_stdlib/: custom_attester.c  custom_ed25519.c
my_mbedtls_stdlib/include/: custom_asn1.h  custom_functions.h  custom_oid.h  custom_string.h  custom_utils.h  custom_utils_2.h  custom_x509.h  enclave_reference_value.h  sm_reference_value.h
scripts/: get_attestation.sh
server_eapp/: CMakeLists.txt  app.lds  server_eapp.c
trusted_client/: CMakeLists.txt  cert_verifier.c  cert_verifier.h  client.cpp  db_access.cpp  db_access.h  trusted_client.cpp  trusted_client.h
verifier/: CMakeLists.txt  cert_verifier.c  client.cpp  db_access.cpp  db_access.h  verifier.cpp  verifier.h
verifier/include/: cert_verifier.h  tests.h  verifier.h
